Updates from Overleaf

--- a/latex/CompPDEs_FinalProj.tex
+++ b/latex/CompPDEs_FinalProj.tex
@@ -52,7 +52,7 @@ We explore using Semi-Lagrangian numerical methods to solve linear and nonlinear
 
 \setcounter{section}{-1}
 \section{About this version}
-This note is an updated version of the final project submission for the numerics class by Alex Donev in Fall of 2021. This version incorporates some comments by Alex Donev on the original submitted version. There is no major revisions and some mistakes were acknowledged but uncorrected. This note should act as a sample of final project for this class, instead of a polished note for the public.
+This note is an updated version of the final project submission for the numerics class by Aleks Donev in Fall of 2021. This version incorporates some comments by Aleks Donev on the original submitted version. There is no major revisions and some mistakes were acknowledged but uncorrected. This note should act as a sample of final project for this class, instead of a polished note for the public.
 
 \section{Introduction}
 We want to solve the linear non-diffusive advection of a passive tracer\footnote{It is possible to add diffusion in the \sml\;framework, see \cite{SpiegelmanKatz_06}.}. Assume $\nabla\cdot\ve u = 0$, we have the Partial Differential Equation (PDE):
@@ -304,7 +304,7 @@ Now that the departure point is solve to fifth order locally, we need a fifth or
 It is curious why \sml\ method literature does not use RK method to solve for the departure point. We check the cost by counting the number of interpolations and their requires order. We compare RK3, which should be third order, with MCD86: RK3 needs three third and a forth order interpolation, while MCD86 needs two second, two third, and two forth order interpolation. It seems MCD86 is more expensive. We comment that the second and third RK4 step looks like a fixed point solver, and it might be that the RK4 method and classic \sml\ methods are more similar than the form suggests. We will continue the discussion in Section \ref{sec:nonli_adv} for nonlinear advection. 
 
 We could replace all the interpolation with FINUFFT so that they are spectrally accurate. We give a large enough $Nx = Ny$ so that there is no spatial error (for 3 Gaussian, $Nx = Ny = 81$). Then we can fix the spatial resolution and improve accuracy by only refining the timestep. This is a good way to isolate the error produced by the timestepping. But this is also viable numerical method. In a sense, the method is pseudospectral but with with \sml\ timestepping. This has real advantage compared to the regular pseudospectral method for advection since it could take a lot bigger a timestep while still being stable. 
-For example, to solve the problem above, \sml\ Pseudospectral method /w FINUFFT is stable for CFL number up to 3 while the regular IF-RK4 Pseudospectral method is only stable when CFL number is less than 0.5. Fig. \ref{fig:conv_order_finu_} shows the convergence order result for \sml\ Pseudospectral and IF-RK4 Pseudospectral methods. We see that all the convergence order of \sml\ method stay the same. In particular, the error for the most accurate result for \sml\ RK4 Pseudospectral (RK4SLPs) method is $O(10^{-9})$, very small! And that is achieved with 54 timestep (i.e.: $\Delta t = 0.0093$). IF-RK4 Pseudospectral method does not each the same level of accuracy with same number of timestep (the $x$-axis of the IF-RK4 figure is large than the rest). To truly compare the two methods, we also need to know the cost per timestep. Assuming that FINUFFT cost as much as a standard uniform Fast Fourier Transform (FFT), we approximate the cost by counting the number of \texttt{fft/ifft} pairs per timestep. For IF-RK4, assume that the velocity is given in Fourier space and we solve for the tracer in Fourier space, we only need four pairs of \texttt{fft/ifft} per timestep. The RK4SLPs method needs four $u,v$ interpolation and one tracer field interpolation, and that is $4\times 2+1 = 9$ \texttt{fft/ifft} pairs. Therefore we could say a RK4SLPs step is as expensive as two IF-RK4 steps. But compare the stability and accuracy of the two methods shown in Fig. \ref{fig:conv_order_finu_}, we see that IF-RK4 needs more than two times the timestep to reach the same accuracy. Therefore we conclude that RK4SLPs is cheaper as a solver for linear advection\footnote{Comment from Alex Donev: Pseudospectral methods could be combined with spectral deferred correction (SDC) to achieve much better accuracy in $\Delta t$. It is also worth noting that NUFFT only works for periodic functions on periodic domains. These factors should also be considered when we make the comparison}.
+For example, to solve the problem above, \sml\ Pseudospectral method /w FINUFFT is stable for CFL number up to 3 while the regular IF-RK4 Pseudospectral method is only stable when CFL number is less than 0.5. Fig. \ref{fig:conv_order_finu_} shows the convergence order result for \sml\ Pseudospectral and IF-RK4 Pseudospectral methods. We see that all the convergence order of \sml\ method stay the same. In particular, the error for the most accurate result for \sml\ RK4 Pseudospectral (RK4SLPs) method is $O(10^{-9})$, very small! And that is achieved with 54 timestep (i.e.: $\Delta t = 0.0093$). IF-RK4 Pseudospectral method does not each the same level of accuracy with same number of timestep (the $x$-axis of the IF-RK4 figure is large than the rest). To truly compare the two methods, we also need to know the cost per timestep. Assuming that FINUFFT cost as much as a standard uniform Fast Fourier Transform (FFT), we approximate the cost by counting the number of \texttt{fft/ifft} pairs per timestep. For IF-RK4, assume that the velocity is given in Fourier space and we solve for the tracer in Fourier space, we only need four pairs of \texttt{fft/ifft} per timestep. The RK4SLPs method needs four $u,v$ interpolation and one tracer field interpolation, and that is $4\times 2+1 = 9$ \texttt{fft/ifft} pairs. Therefore we could say a RK4SLPs step is as expensive as two IF-RK4 steps. But compare the stability and accuracy of the two methods shown in Fig. \ref{fig:conv_order_finu_}, we see that IF-RK4 needs more than two times the timestep to reach the same accuracy. Therefore we conclude that RK4SLPs is cheaper as a solver for linear advection\footnote{Comment from Aleks Donev: Pseudospectral methods could be combined with spectral deferred correction (SDC) to achieve much better accuracy in $\Delta t$. It is also worth noting that NUFFT only works for periodic functions on periodic domains. These factors should also be considered when we make the comparison}.
 \begin{figure}[H]
     \centering
     \includegraphics{figs/conv_order_finu_Euler}
